[tool.poetry]
name = "popular-ds-questions-python"
version = "0.1.0"
description = "DS problems which helps understand CS better!!!"
authors = ["Vineeth Menon <vineeth.madhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
